Fixed uneven gap

--- a/src/Layout/Components/Common/style/three_dot.sass
+++ b/src/Layout/Components/Common/style/three_dot.sass
@@ -6,6 +6,7 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+    gap: 4px
     &:hover
         background: rgba(150,150,150,0.3)
     span
@@ -13,4 +14,3 @@
         height: 5px
         width: 5px
         border-radius: 50%
-        margin-top: 4px
